<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients"
    android:paddingLeft="18dp"
    android:paddingTop="20dp"
    android:paddingRight="18dp"
    android:paddingBottom="20dp"
    tools:context=".MainActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/maintitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="#FFF"
                android:textSize="40dp" />

            <EditText
                android:inputType="text"
                android:id="@+id/main_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_account_box_black_24dp"
                android:drawablePadding="12dp"
                android:hint="@string/login_user"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4682B4" />

            <EditText
                android:id="@+id/main_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="12dp"
                android:hint="@string/login_userpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4682B4" />

            <!--<CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/login_remember"
                android:textColor="#FFF"
                android:textSize="14sp" />-->

            <Button
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_btn"
                android:elevation="3dp"
                android:onClick="login"
                android:padding="4dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#1E709F" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>